put hidden floorw in [ ] via css

--- a/static/main.css
+++ b/static/main.css
@@ -183,3 +183,6 @@ h2 {
 .floor-inactive {
     color: #f08080  !important;
 }
+
+.floor-inactive:before{content:"[";}
+.floor-inactive:after{content:"]";}
